deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappdeployment
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: container1
          image: docker.io/kundankkkrishna/finalapp:latest
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
