services.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: myapp
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: myapp
---
apiVersion: v1
kind: Pod
metadata:
 name: mypod
spec:
  containers:
    - image: docker.io/kundankkkrishna/newapp:latest
      name: finalapp
      ports:
        - containerPort: 8081
      resources:
        limits:
          cpu: 100m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappdeployment
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: container1
          image: docker.io/kundankkkrishna/newapp:latest
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
